@@ -1,6 +1,6 @@
 
 *******************
-* StateS v. 0.2.6 *
+* StateS v. 0.2.7 *
 *******************
 
 // The following behaviors are known.
